[project]
name = "cpf-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "dicttoxml>=1.7.16",
    "pandas>=2.2.3",
    "python-dateutil>=2.9.0.post0",
    "setuptools>=80.7.1",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
]
